@@ -1,4 +1,6 @@
 - library:
+  o enable rpmdrake/gurpm/drakx to pass their own callbacks for erasure
+    progress & errors
   o enhanced doc
 
 Version 7.19 - 9 February 2013, by Thierry Vignaud
